Modify tests so they don't need public visibility.