@@ -1,4 +1,4 @@
-package org.hasan;
+package org.hasan.java8;
 
 import org.junit.jupiter.api.Test;
 
@@ -14,17 +14,17 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
 // Technically part of Java8Test but split out as it got quite big
-public class LambdasTest {
+class LambdasTest {
     @Test
-    public void sorting() {
+    void sorting() {
         String[] words = {"aaa", "b", "cccc", "dd"};
         Arrays.sort(words, (String s1, String s2) -> s1.length() - s2.length());
         assertThat(words, is(new String[]{"b", "dd", "aaa", "cccc"}));
     }
 
     @Test
-    public void filtering() {
-        List<String> vals = Arrays.asList("x", "a", "m", "a", "x");
+    void filtering() {
+        List<String> vals = List.of("x", "a", "m", "a", "x");
         long countOfAs = vals.stream().filter(v -> v.equals("a")).count();
         assertThat(countOfAs, is(2L));
 
@@ -33,8 +33,8 @@ public class LambdasTest {
     }
 
     @Test
-    public void groupInToMap() {
-        List<String> vals = Arrays.asList("x", "a", "m", "a", "x");
+    void groupInToMap() {
+        List<String> vals = List.of("x", "a", "m", "a", "x");
         Map<String, Long> valCount = vals.stream()
                 .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
         assertThat(valCount.get("x"), is(2L));
@@ -42,8 +42,8 @@ public class LambdasTest {
     }
 
     @Test
-    public void mapFunction() {
-        List<String> fruits = Arrays.asList("Apple", "Banana", "Strawberry");
+    void mapFunction() {
+        List<String> fruits = List.of("Apple", "Banana", "Strawberry");
         List<String> upper = fruits.stream().map(v -> v.toUpperCase()).collect(toList());
         assertThat(upper, is(List.of("APPLE", "BANANA", "STRAWBERRY")));
 
@@ -53,8 +53,8 @@ public class LambdasTest {
     }
 
     @Test
-    public void minMaxValues() {
-        List<Integer> numbers = Arrays.asList(2, 1, 9, 4, 8);
+    void minMaxValues() {
+        List<Integer> numbers = List.of(2, 1, 9, 4, 8);
 
         int max = numbers.stream().max(Integer::compare).get();
         assertThat(max, is(9));
@@ -64,18 +64,18 @@ public class LambdasTest {
     }
 
     @Test
-    public void reduce() {
-        List<Integer> numbers = Arrays.asList(1, 2, 5, 2);
+    void reduce() {
+        List<Integer> numbers = List.of(1, 2, 5, 2);
         int total = numbers.stream().reduce((x, y) -> x + y).get();
         assertThat(total, is(10));
     }
 
     @Test
-    public void flatMap() {
+    void flatMap() {
         // Given:
-        List<Integer> a = Arrays.asList(1, 4);
-        List<Integer> b = Arrays.asList(10, 20, 30);
-        List<Integer> c = Arrays.asList(5, 15);
+        List<Integer> a = List.of(1, 4);
+        List<Integer> b = List.of(10, 20, 30);
+        List<Integer> c = List.of(5, 15);
 
         // When:
         List<Integer> combinedList = Stream.of(a, b, c)
